Due to the transition to JCommon's logging, the Logging system was not initialized properly. Well, it used the plain default logging, no matter what the config said.

--- a/jfreereport/source/org/jfree/report/demo/demo.properties
+++ b/jfreereport/source/org/jfree/report/demo/demo.properties
@@ -4,7 +4,7 @@
 
 # 
 # The minimum loglevel that is logged.
-org.jfree.report.LogLevel=Info
+org.jfree.base.LogLevel=Info
 
 # 
 # Defines, whether the toolbar will contain large icons. This is enabled by default.
