--- a/jfreereport/source/org/jfree/report/jfreereport.properties
+++ b/jfreereport/source/org/jfree/report/jfreereport.properties
@@ -1,6 +1,10 @@
 #
 # The minimum loglevel that is logged
-org.jfree.report.LogLevel=Debug
+org.jfree.base.LogLevel=Debug
+
+#
+# Where to log. Give a classname of a  valid LogTarget implementation.
+org.jfree.base.LogTarget=org.jfree.report.util.SystemOutLogTarget
 
 #
 # Where to store cached configuration data
@@ -32,10 +36,6 @@ org.jfree.report.layout.fontrenderer.UseAliasing=true
 org.jfree.report.layout.fontrenderer.IsBuggyFRC=false
 
 #
-# Where to log. Give a classname of a  valid LogTarget implementation.
-org.jfree.report.LogTarget=org.jfree.report.util.SystemOutLogTarget
-
-#
 # Defines, whether the page layouter prints a massive amount of debug messages.
 # This is for debugging only, you wouldn't activate this in a production system.
 org.jfree.report.PrintOperationComment=false
@@ -58,12 +58,6 @@ org.jfree.report.ReportBuilderHint.ParanoidChecks=true
 # If set to true, an additional logging entry is added whenever an invalid column
 # is encountered.
 org.jfree.report.WarnInvalidColumns=true
-
-#
-# Should the debugging system be disabled by default. This option will surpress all
-# output, no single line of debug information will be printed. If you want to remove
-# System.out-debugging on the server side, try to switch to a Log4J-LogTarget instead.
-org.jfree.report.NoDefaultDebug=false
 
 #
 # Defines, whether JFreeReport should query the default page format from the printerdriver.
@@ -89,7 +83,6 @@ org.jfree.report.modules.gui.xls.Module=org.jfree.report.modules.gui.xls.ExcelEx
 
 #
 # Base modules ..
-org.jfree.report.modules.base.logging.Module=org.jfree.report.DefaultLogModule
 org.jfree.report.modules.base.core.Module=org.jfree.report.JFreeReportCoreModule
 
 #
