TextParagraph fixed: appendReserveLit(..) was not working correctly. BaseFontSupport changed as libfonts now differentiates between oblique and italic fonts

--- a/jfreereport/source/org/jfree/report/jfreereport.properties
+++ b/jfreereport/source/org/jfree/report/jfreereport.properties
@@ -4,7 +4,7 @@ org.jfree.base.LogLevel=Debug
 
 #
 # Where to log. Give a classname of a  valid LogTarget implementation.
-org.jfree.base.LogTarget=org.jfree.report.util.SystemOutLogTarget
+org.jfree.base.LogTarget=org.jfree.util.PrintStreamLogTarget
 
 #
 # Where to store cached configuration data
