Added Skinning support to make it easier to replace the icons and or resource bundles

--- a/jfreereport/ant/build.properties
+++ b/jfreereport/ant/build.properties
@@ -111,3 +111,4 @@ module-gui-plaintext-file=${targetdir}${jfreereport.name}-gui-plaintext-${jfreer
 module-gui-print-file=${targetdir}${jfreereport.name}-gui-print-${jfreereport.version}.jar
 module-gui-xls-file=${targetdir}${jfreereport.name}-gui-xls-${jfreereport.version}.jar
 module-gui-rtf-file=${targetdir}${jfreereport.name}-gui-rtf-${jfreereport.version}.jar
+module-gui-skin-base-file=${targetdir}${jfreereport.name}-gui-skin-base-${jfreereport.version}.jar
