--- a/jfreereport/source/org/jfree/report/modules/gui/base/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/base/configuration.properties
@@ -124,3 +124,8 @@ org.jfree.report.modules.gui.base.StoreExportDialogInputs=true
 # Defines, whether to use the Report's Locale for the GUI (if available)
 # or whether Locale.getDefault() gets used.
 org.jfree.report.modules.gui.base.UseReportLocale=false
+
+
+org.jfree.report.modules.gui.base.Skin=org.jfree.report.modules.gui.base.ResourceBundleSkin
+
+org.jfree.report.modules.gui.base.SkinResourceBundle=org/jfree/report/modules/gui/skin/base/skin
