Configuration editor update

--- a/jfreereport/source/org/jfree/report/modules/gui/base/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/base/configuration.properties
@@ -125,7 +125,14 @@ org.jfree.report.modules.gui.base.StoreExportDialogInputs=true
 # or whether Locale.getDefault() gets used.
 org.jfree.report.modules.gui.base.UseReportLocale=false
 
-
+#
+# The Skin implementation supplies the resource-bundle and is responsible for
+# loading all icons. Use this configuration setting to replace the default
+# icons and resource-bundles with your own implementation.
 org.jfree.report.modules.gui.base.Skin=org.jfree.report.modules.gui.base.ResourceBundleSkin
 
+#
+# The resource bundle name for the default skin implementation. If you only
+# want to replace the icons, point this entry to your own property file.
+# The default icons are stored in the module-jar file 'skin-base'. 
 org.jfree.report.modules.gui.base.SkinResourceBundle=org/jfree/report/modules/gui/skin/base/skin
