--- a/jfreereport/source/org/jfree/report/modules/output/table/html/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/table/html/configuration.properties
@@ -43,8 +43,7 @@ org.jfree.report.modules.output.table.html.EmptyCellsUseCSS=false
 # is device dependent and makes it hard to predict the
 # final size in the HTML-Page.
 #
-# Most users are used to think in pixels, so this will be
-# the default.
+# Most users are used to think in pixels, therefore the default is 'false'.
 #
 # This is a local configuration setting an can be enabled in the report.
 org.jfree.report.modules.output.table.html.UseDeviceIndependentImageSize=false
