--- a/jfreereport/source/org/jfree/report/modules/output/table/xls/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/table/xls/configuration.properties
@@ -18,6 +18,11 @@ org.jfree.report.modules.output.table.xls.EnhancedDataFormat=true
 # Valid values are "Landscape" or "Portrait" 
 #org.jfree.report.modules.output.table.xls.PaperOrientation=Landscape
 
+#
+# Limits the number of defined styles to 4000. Excel seems to crash if there 
+# are too many styles defined in a workbook. Once the limit is reached, and
+# this property is set to true (which is the default), all subsequent style
+# definitions will be ignored for that workbook.
 org.jfree.report.modules.output.table.xls.HardStyleCountLimit=true
 
 #
