Excel image support

--- a/jfreereport/source/org/jfree/report/modules/gui/skin/base/skin.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/skin/base/skin.properties
@@ -48,6 +48,9 @@ action.page-setup.icon=org/jfree/report/modules/gui/skin/base/PageSetup24.gif
 action.print.small-icon=org/jfree/report/modules/gui/skin/base/Print16.gif
 action.print.icon=org/jfree/report/modules/gui/skin/base/Print24.gif
 
+action.print-preview.small-icon=org/jfree/report/modules/gui/skin/base/PrintPreview16.gif
+action.print-preview.icon=org/jfree/report/modules/gui/skin/base/PrintPreview24.gif
+
 action.export-to-plaintext.icon=org/jfree/report/modules/gui/skin/base/SaveAs24.gif
 action.export-to-plaintext.small-icon=org/jfree/report/modules/gui/skin/base/SaveAs16.gif
 
