--- a/jfreereport/ant/build.properties
+++ b/jfreereport/ant/build.properties
@@ -5,7 +5,7 @@
 #
 #  Global settings ...
 jfreereport.name=jfreereport
-jfreereport.version=0.8.6-4
+jfreereport.version=0.8.6-5
 jcommon.version=1.0.0
 
 #
@@ -58,7 +58,7 @@ itext-jar-file=itext-1.3.5.jar
 libfonts-jar-file=libfonts-0.1.2.jar
 
 # Used by: module-output-table-xml
-jakarta-poi-jar-file=poi-2.5.1-final-20040804.jar
+jakarta-poi-jar-file=poi-3.0-alpha1-20050704.jar
 
 ##############################################################
 #
