Added SVG support and updated the version numbers of the module specs

--- a/jfreereport-ext/source/org/jfree/report/ext/jfreereport-ext.properties
+++ b/jfreereport-ext/source/org/jfree/report/ext/jfreereport-ext.properties
@@ -12,3 +12,4 @@ org.jfree.report.ext.modules.java14print.Module=org.jfree.report.ext.modules.jav
 org.jfree.report.ext.modules.java14imageio.Module=org.jfree.report.ext.modules.java14imageio.Java14ImageIOModule
 org.jfree.report.ext.modules.log4jlog.Module=org.jfree.report.ext.modules.log4jlog.Log4JLogModule
 org.jfree.report.ext.modules.jfreechart.Module=org.jfree.report.ext.modules.jfreechart.JFreeChartModule
+org.jfree.report.ext.modules.svgimage.Module=org.jfree.report.ext.modules.svgimage.SVGImageModule
