--- a/jfreereport-ext/source/org/jfree/report/ext/modules/java14log/module.properties
+++ b/jfreereport-ext/source/org/jfree/report/ext/modules/java14log/module.properties
@@ -9,8 +9,14 @@ module-info:
                Java1.4 log. The logging system is not configured in any way,
                as the containing application will be responsible for that task.
   version.major: 0
-  version.minor: 85
+  version.minor: 86
   version.patchlevel: 0
   subsystem: logging
 
-  
+
+depends:
+  module: org.jfree.report.JFreeReportCoreModule
+  version.major: 0
+  version.minor: 86
+  version.patchlevel: 0
+
