--- a/jfreereport-ext/source/org/jfree/report/ext/modules/log4jlog/module.properties
+++ b/jfreereport-ext/source/org/jfree/report/ext/modules/log4jlog/module.properties
@@ -9,6 +9,13 @@ module-info:
                Apache Log4J logging library. The logging system is not configured
                in any way, as the application will be responsible for that task.
   version.major: 0
-  version.minor: 85
+  version.minor: 86
   version.patchlevel: 0
   subsystem: logging
+
+depends:
+  module: org.jfree.report.JFreeReportCoreModule
+  version.major: 0
+  version.minor: 86
+  version.patchlevel: 0
+
