--- a/jfreereport-ext/ant/build.properties
+++ b/jfreereport-ext/ant/build.properties
@@ -29,6 +29,7 @@ junit-jar-file=junit.jar
 log4j-jar-file=log4j-1.2.3.jar
 jlfgr-archive-file=jlfgr-1_0.zip
 servlet-jar-file=servlet.jar
+svgsalamander-jar-file=svgsalamander.jar
 jfreechart-jar-file=jfreechart-1.0.0-rc1.jar
 
 
