--- a/jfreereport-ext/ant/build.xml
+++ b/jfreereport-ext/ant/build.xml
@@ -417,6 +417,50 @@
     <delete dir="build"/>
   </target>
 
+
+  <!-- ************************************************************** -->
+  <!--                                                                -->
+  <!--  Java 1.4 printing API module                                  -->
+  <!--                                                                -->
+  <!-- ************************************************************** -->
+  <target name="build-module-ext-svgimage" if="java-1.4.present">
+    <javac srcdir="source"
+      destdir="build" target="${build.target}"
+      deprecation="${build.deprecation}" debug="${build.debug}" optimize="${build.optimize}">
+      <include name="org/jfree/report/ext/modules/java14print/*.java"/>
+      <classpath>
+        <pathelement location="${jfreereport-dir}/${libdir}/${jcommon-jar-file}"/>
+        <pathelement location="${ext.libdir}/${svgsalamander-jar-file}"/>
+        <pathelement location="${jfreereport-dir}/${jfreereport-all-jar-file}"/>
+      </classpath>
+    </javac>
+
+    <!-- include the report definition files -->
+    <copy todir="build/org/jfree/report/ext/modules/svgimage">
+      <fileset dir="source/org/jfree/report/ext/modules/svgimage">
+        <include name="**/*.properties"/>
+      </fileset>
+    </copy>
+
+  </target>
+
+  <target name="compile-module-ext-svgimage" depends="init" if="java-1.4.present">
+    <echo>Building SVG-Image modules</echo>
+
+    <!-- create a temp build directory -->
+    <mkdir dir="build"/>
+
+    <antcall target="build-module-ext-svgimage"/>
+
+    <!-- make the jar -->
+    <jar jarfile="${module-ext-svgimage-file}"
+      basedir="build">
+    </jar>
+
+    <!-- delete the temp directory -->
+    <delete dir="build"/>
+  </target>
+
   <!-- ************************************************************** -->
   <!--                                                                -->
   <!--  Apache Log4J logging integration                              -->
@@ -514,6 +558,7 @@
     <antcall target="build-module-ext-java14log"/>
     <antcall target="build-module-ext-java14print"/>
     <antcall target="build-module-ext-log4jlog"/>
+    <antcall target="build-module-ext-svgimage"/>
 
     <!-- make the jar -->
     <jar jarfile="${module-ext-all-file}"
@@ -545,6 +590,7 @@
         <pathelement location="${ext.libdir}/${log4j-jar-file}"/>
         <pathelement location="${ext.libdir}/${servlet-jar-file}"/>
         <pathelement location="${ext.libdir}/${junit-jar-file}"/>
+        <pathelement location="${ext.libdir}/${svgsalamander-jar-file}"/>
       </classpath>
       <packageset dir="source" defaultexcludes="yes">
         <include name="org/jfree/report/ext/**"/>
