--- a/jfreereport-ext/source/org/jfree/report/ext/modules/barcode/module.properties
+++ b/jfreereport-ext/source/org/jfree/report/ext/modules/barcode/module.properties
@@ -7,5 +7,12 @@ module-info:
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: Provides support for barcode creation.
   version.major: 0
-  version.minor: 85
+  version.minor: 86
   version.patchlevel: 0
+
+depends:
+  module: org.jfree.report.JFreeReportCoreModule
+  version.major: 0
+  version.minor: 86
+  version.patchlevel: 0
+
