--- a/jfreereport-ext/source/org/jfree/report/ext/modules/svgimage/module.properties
+++ b/jfreereport-ext/source/org/jfree/report/ext/modules/svgimage/module.properties
@@ -1,15 +1,15 @@
 #
-# Support for JFreeChart generated charts
+# Support for logging to the Apache Log4J Library
 #
 
 module-info:
-  name: jfreechart-content-module
+  name: svgimage-module
   producer: The JFreeReport project - www.jfree.org/jfreereport
-  description: JFreeChart support.
+  description: An SVG renderer. This allows JFreeReport to load and display
+               SVG images.
   version.major: 0
   version.minor: 86
   version.patchlevel: 0
-
 
 depends:
   module: org.jfree.report.JFreeReportCoreModule
