--- a/jfreereport-ext/webapp/WEB-INF/classes/jfreereport.properties
+++ b/jfreereport-ext/webapp/WEB-INF/classes/jfreereport.properties
@@ -3,3 +3,6 @@
 #
 # See the base package for details on the available report configuration keys.
 
+org.jfree.base.LogLevel=Debug
+org.jfree.base.LogTarget=org.jfree.util.PrintStreamLogTarget
+org.jfree.base.LogAutoInit=true
