Added a real CSV data export. made sure that all demos boot the JFreeReport classes before using them.

--- a/jfreereport/source/org/jfree/report/modules/gui/csv/resources/csv-export-resources.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/csv/resources/csv-export-resources.properties
@@ -32,6 +32,15 @@ csvexportdialog.targetOverwriteTitle=Overwrite file?
 csvexportdialog.warningTitle=Warning
 csvexportdialog.cancel=Cancel
 
+csvexportdialog.exported-bands=Select contents to export:
+csvexportdialog.enable-report-header=Report Header
+csvexportdialog.enable-report-footer=Report Footer
+csvexportdialog.enable-group-header=Group Header
+csvexportdialog.enable-group-footer=Group Footer
+csvexportdialog.enable-itemband=Itemband
+csvexportdialog.write-state-columns=Write additional report-state columns
+csvexportdialog.noContentForExport=There is no content selected for the export.
+
 cvs-export.progressdialog.title=Exporting to a CSV file ...
 cvs-export.progressdialog.message=The report is now exported into a CSV file ...
 
