--- a/jfreereport/source/org/jfree/report/modules/output/csv/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/csv/configuration.properties
@@ -4,7 +4,6 @@
 
 #
 # Defines the column separator, defaults to comma.
-#
 org.jfree.report.modules.output.csv.Separator=,
 
 #
@@ -12,3 +11,17 @@ org.jfree.report.modules.output.csv.Separator=,
 # first row.
 #
 org.jfree.report.modules.output.csv.WriteDatarowNames=false
+
+#
+# Defines, whether JFreeReport adds extra columns to indicate
+# the report state that caused the current row to be printed
+org.jfree.report.modules.output.csv.WriteStateColumns=false
+
+#
+# Defines, which band types will be printed.
+org.jfree.report.modules.output.csv.EnableReportFooter=true
+org.jfree.report.modules.output.csv.EnableReportHeader=true
+org.jfree.report.modules.output.csv.EnableGroupHeaders=true
+org.jfree.report.modules.output.csv.EnableGroupFooters=true
+org.jfree.report.modules.output.csv.EnableItembands=true
+
