--- a/jfreereport/ant/build.properties
+++ b/jfreereport/ant/build.properties
@@ -5,8 +5,8 @@
 #
 #  Global settings ...
 jfreereport.name=jfreereport
-jfreereport.version=0.8.6-5
-jcommon.version=1.0.0
+jfreereport.version=0.8.6-6
+jcommon.version=1.1.0
 
 #
 # This defines the compiler settings. Optimizing would remove
@@ -38,7 +38,7 @@ manifest-lib-prefix=lib/
 #  Used libraries ...
 
 # Used by: core libraries
-jcommon-jar-file=jcommon-1.1.0.jar
+jcommon-jar-file=jcommon-${jcommon.version}.jar
 pixie-jar-file=pixie-0.8.4.jar
 
 # Used by: module-misc-beanshell
@@ -49,7 +49,7 @@ bsf-jar-file=bsf-2.3.0.jar
 
 # Used by: module-parser
 jaxp-jar-file=gnujaxp.jar
-jcommon-xml-jar-file=jcommon-xml-1.1.0.jar
+jcommon-xml-jar-file=jcommon-xml-${jcommon.version}.jar
 
 # Used by: module-output-pdf
 #          module-output-table-rtf
