--- a/jfreereport/source/org/jfree/report/modules/output/table/csv/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/table/csv/configuration.properties
@@ -4,4 +4,5 @@
 
 #
 # Defines the default separator, that should be used for the output.
-#org.jfree.report.modules.output.table.csv.Separator=,
+org.jfree.report.modules.output.table.csv.Separator=,
+
