Fixed the state-advancement bug for pagebreak-before-print events

--- a/jfreereport/source/org/jfree/report/demo/internationalisation/i18ndemo.properties
+++ b/jfreereport/source/org/jfree/report/demo/internationalisation/i18ndemo.properties
@@ -4,3 +4,5 @@ data.secondElement=2nd\ Element
 data.thirdElement=3rd\ Element
 data.fourthElement=4th\ Element
 data.lastElement=Last\ Element
+
+data.messagefield.format=The '$(report.name)' report is a demo on JFreeReports internationalization features.
