--- a/jfreereport/ant/build.properties
+++ b/jfreereport/ant/build.properties
@@ -5,8 +5,8 @@
 #
 #  Global settings ...
 jfreereport.name=jfreereport
-jfreereport.version=0.8.6-7
-jcommon.version=1.1.0
+jfreereport.version=0.8.7
+jcommon.version=1.1.1
 
 #
 # This defines the compiler settings. Optimizing would remove
@@ -55,7 +55,7 @@ jcommon-xml-jar-file=jcommon-xml-${jcommon.version}.jar
 #          module-output-table-rtf
 #          module-output-support-itext
 itext-jar-file=itext-1.3.6.jar
-libfonts-jar-file=libfonts-0.1.3.jar
+libfonts-jar-file=libfonts-0.1.4.jar
 
 # Used by: module-output-table-xml
 jakarta-poi-jar-file=poi-3.0-alpha1-20050704.jar
