--- a/jfreereport-ext/ant/targets.properties
+++ b/jfreereport-ext/ant/targets.properties
@@ -15,6 +15,7 @@ module-ext-java14print-file=${targetdir}${jfreereport.name}-ext-module-java14pri
 module-ext-log4jlog-file=${targetdir}${jfreereport.name}-ext-module-log4jlog-${jfreereport.version}.jar
 module-ext-java14imageio-file=${targetdir}${jfreereport.name}-ext-module-java14imageio-${jfreereport.version}.jar
 module-ext-barcode-file=${targetdir}${jfreereport.name}-ext-module-barcode-${jfreereport.version}.jar
+module-ext-svgimage-file=${targetdir}${jfreereport.name}-ext-module-svgimage-${jfreereport.version}.jar
 
 #
 # Support for the maven build 
