--- a/jfreereport-ext/source/org/jfree/report/ext/modules/java14config/module.properties
+++ b/jfreereport-ext/source/org/jfree/report/ext/modules/java14config/module.properties
@@ -10,7 +10,7 @@
 # The settings are stored in the user-configuation by default.
 #
 module-info:
-  name: java.lang.prefs-configstore-module
+  name: java.lang.prefs-configstore
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: Initialializer to support external configuration storages.
   version.major: 0
