--- a/jfreereport-ext/source/org/jfree/report/ext/modules/java14imageio/module.properties
+++ b/jfreereport-ext/source/org/jfree/report/ext/modules/java14imageio/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: java-1.4-imageio-module
+  name: java-1.4-imageio
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: Initialializer to configure the image loader to use the
                javax.imageio-API for loading images.
