--- a/jfreereport-ext/source/org/jfree/report/ext/modules/java14log/module.properties
+++ b/jfreereport-ext/source/org/jfree/report/ext/modules/java14log/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: java-1.4-logging-module
+  name: java-1.4-logging
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: Initialializer to configure the log system to write to the
                Java1.4 log. The logging system is not configured in any way,
