--- a/jfreereport-ext/source/org/jfree/report/ext/modules/jfreechart/module.properties
+++ b/jfreereport-ext/source/org/jfree/report/ext/modules/jfreechart/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: jfreechart-content-module
+  name: jfreechart-content
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: JFreeChart support.
   version.major: 0
