--- a/jfreereport-ext/source/org/jfree/report/ext/modules/log4jlog/module.properties
+++ b/jfreereport-ext/source/org/jfree/report/ext/modules/log4jlog/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: log4j-logging-module
+  name: log4j-logging
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: Initialializer to configure the log system to write to the
                Apache Log4J logging library. The logging system is not configured
