--- a/jfreereport-ext/source/org/jfree/report/ext/modules/svgimage/module.properties
+++ b/jfreereport-ext/source/org/jfree/report/ext/modules/svgimage/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: svgimage-module
+  name: svgimage
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: An SVG renderer. This allows JFreeReport to load and display
                SVG images.
