--- a/jfreereport/ant/build.xml
+++ b/jfreereport/ant/build.xml
@@ -115,7 +115,8 @@ module-file=$${module-${module}-file}</echo>
       </fileset>
     </copy>
 
-    <copy file="maven-jfreereport-project.xml" tofile="distribution/maven-jfreereport-project.xml"/>
+    <copy file="maven-jfreereport-project.xml"
+          tofile="distribution/maven-jfreereport-project.xml"/>
 	
   </target>
 
