Made the line-height fix configurable, as this caused massive trouble. The strict fix is now disabled by default and must be explicitly enabled.

--- a/jfreereport/source/org/jfree/report/jfreereport.properties
+++ b/jfreereport/source/org/jfree/report/jfreereport.properties
@@ -36,6 +36,31 @@ org.jfree.report.layout.fontrenderer.UseAliasing=true
 org.jfree.report.layout.fontrenderer.IsBuggyFRC=false
 
 #
+# The old JFreeReport way of computing line heights is not working correctly
+# in some cases. Under some conditions, a character may exceed its normal
+# line height (for instance if it is an upper case letter with accents).
+# In that case, using the font size as line height is not working correctly,
+# causing the text to be clipped.
+#
+# If this property is set to true, the line height is computed from the maximum
+# character size for the specified font. If set to false, the line height is
+# set to match the declared font size, so that the old behaviour of previous
+# versions of JFreeReport is preserved.
+org.jfree.report.layout.fontrenderer.UseMaxCharBounds=false
+
+#
+# The old JFreeReport way of computing line heights is not working correctly
+# in some cases. Under some conditions, a character may exceed its normal
+# line height (for instance if it is an upper case letter with accents).
+# In that case, using the font size as line height is not working correctly,
+# causing the text to be clipped.
+#
+# If this property is set to true, no clipping is applied when performing the
+# text rendering. This minimizes the negative effects of the old line height
+# algorithm, but may cause artefacts in the output.
+org.jfree.report.layout.fontrenderer.ClipText=false
+
+#
 # Defines, whether the page layouter prints a massive amount of debug messages.
 # This is for debugging only, you wouldn't activate this in a production system.
 org.jfree.report.PrintOperationComment=true
