--- a/jfreereport-ext/source/org/jfree/report/ext/modules/barcode/module.properties
+++ b/jfreereport-ext/source/org/jfree/report/ext/modules/barcode/module.properties
@@ -5,14 +5,14 @@
 module-info:
   name: barcode-content-classes
   producer: The JFreeReport project - www.jfree.org/jfreereport
-  description: Provides support for barcode creation.
+  description: Provides support for barcode creation. Incomplete; DO NOT USE!
   version.major: 0
-  version.minor: 86
+  version.minor: 87
   version.patchlevel: 0
 
 depends:
   module: org.jfree.report.JFreeReportCoreModule
   version.major: 0
-  version.minor: 86
+  version.minor: 87
   version.patchlevel: 0
 
