--- a/libfonts/ant/build.xml
+++ b/libfonts/ant/build.xml
@@ -79,8 +79,8 @@
 
   <target name="fill-dist-dir">
     <!-- copy across README -->
-    <copy file="README.txt"
-      tofile="distribution/README.txt" failonerror="false"/>
+    <copy file="README"
+      tofile="distribution/README" failonerror="false"/>
 
     <!-- copy across LICENCE -->
     <copy file="licence-LGPL.txt"
