More work for JFreeReport 0.9

--- a/libfonts/ant/build.properties
+++ b/libfonts/ant/build.properties
@@ -15,6 +15,7 @@ build.deprecation=true
 #
 # Make sure that JDK 1.2 compatible class files are generated
 build.target=1.2
+build.source=1.2
 
 #
 # All path settings are relative to the project root directory
@@ -37,7 +38,7 @@ manifest-lib-prefix=lib/
 # Used by: core libraries
 
 # Used by: module-misc-beanshell
-jcommon-jar-file=jcommon-1.0.1.jar
+jcommon-jar-file=jcommon-1.0.3.jar
 
 
 ##############################################################
