--- a/jcommon-serializer/source/org/jfree/serializer/serializer.properties
+++ b/jcommon-serializer/source/org/jfree/serializer/serializer.properties
@@ -1,6 +1,7 @@
 #
-#
-#
+# All known serialization handlers.
+# The format is simple:
+# org.jfree.serializer.handler.<target-classname>=<implementation-class-name>
 org.jfree.serializer.handler.java.awt.GradientPaint=org.jfree.serializer.methods.GradientPaintSerializer
 org.jfree.serializer.handler.java.awt.BasicStroke=org.jfree.serializer.methods.BasicStrokeSerializer
 org.jfree.serializer.handler.java.awt.geom.Dimension2D=org.jfree.serializer.methods.Dimension2DSerializer
