Replaced the JDK 1.4 version of OSCache with a more traditional build. Long lives JDK 1.2.2 :)

--- a/libloader/ant/build.properties
+++ b/libloader/ant/build.properties
@@ -43,7 +43,7 @@ jcommon-jar-file=jcommon-1.0.3.jar
 commons-logging-jar-file=commons-logging-1.0.4.jar
 
 # Used by: module-cache-oscache
-oscache-jar-file=oscache-2.3.jar
+oscache-jar-file=oscache-2.3-compat.jar
 
 # Used by: module-cache-ehcache
 commons-collections-jar-file=commons-collections-2.1.1.jar
